algunos cambios de codigos y estilo en guia 1

--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -17,15 +17,14 @@ $$
 $$
 \begin{multicols}{3}
   \begin{enumerate}[label=(\roman*)]
-    \item $1 \en A \flecha{respueta} \text{V}$
-    \item $\set{1} \subseteq A \flecha{respueta} \text{V}$
+    \item $1 \en A \flecha{respuesta} \text{V}$
+    \item $\set{1} \subseteq A \flecha{respuesta} \text{V}$
     \item $\set{2,1} \subseteq A \flecha{respuesta} \text{V}$
     \item $\set{1,3} \en A \flecha{respuesta} \text{F}$
     \item $\set{2} \en A \flecha{respuesta} \text{F}$
   \end{enumerate}
 \end{multicols}
 
-% Contribuciones
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
