--- a/1-guia/ejercicios-1/ej-10-1.tex
+++ b/1-guia/ejercicios-1/ej-10-1.tex
@@ -19,7 +19,7 @@
   \item
         Sean p, q proposiciones. Verificar que las siguientes expresiones tienen la misma tabla de verdad para
         concluir que son equivalentes:
-        \[
+        $$
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline
             p & q & \neg p & \neg q & p \entonces q & \neg q \entonces \neg p & \neg p \lor q & \neg(p \land \neg q) \\ \hline  \hline\rowcolor{Cerulean!10}
@@ -29,9 +29,9 @@
             F & F & V      & V      & V             & V                       & V             & V                    \\
             \hline
           \end{array}
-        \]
+        $$
   \item
-        \[
+        $$
           \begin{array}{|c|c|c|c|c|c|}
             \hline
             p & q & \neg q & p \entonces q & \neg (p \entonces q) & p\, \y \neg q \\ \hline  \hline\rowcolor{Cerulean!10}
@@ -40,5 +40,9 @@
             F & V & F      & V             & F                    & F             \\
             F & F & V      & V             & F                    & F             \\ \hline
           \end{array}
-        \]
+        $$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
