--- a/1-guia/ejercicios-1/ej-17-1.tex
+++ b/1-guia/ejercicios-1/ej-17-1.tex
@@ -96,3 +96,7 @@ Es útil traer la \textit{definición de Relación, $\relacion$:}
           \end{tikzpicture}
         $$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
