--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -1,7 +1,7 @@
 \begin{enunciado}{\ejercicio}
 
   Dado el conjunto $A = \set{1,2,\set{3},\set{1,2}}$,
-  determinar cuáles de las siguientes afirmaciones son verdaderas:\par
+  determinar cuáles de las siguientes afirmaciones son verdaderas:
 
   \begin{multicols}{4}
     \begin{enumerate}[label=(\roman*)]
@@ -38,3 +38,7 @@
     \item $A \subseteq A \to V $
   \end{enumerate}
 \end{multicols}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
