--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -29,10 +29,8 @@
         $$
 \end{enumerate}
 
-% Contribuciones
 \begin{aportes}
-  %\aporte{url}{nombre icono}
   \item \aporte{\dirRepo}{naD GarRaz \github}
-  \item \aporte{https://www.instagram.com/fransureda}{Francisco Sureda \instagram}
   \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
+  \item \aporte{https://www.instagram.com/fransureda}{Fran Sureda \instagram}
 \end{aportes}
