--- a/1-guia/ejercicios-1/ej-6-1.tex
+++ b/1-guia/ejercicios-1/ej-6-1.tex
@@ -23,7 +23,6 @@
             \fillOnlyA
           \end{venndiagram3sets}
 
-
     \item
           \begin{venndiagram3sets}[shade=gray!20!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
             \fillA
@@ -32,3 +31,7 @@
           \end{venndiagram3sets}
   \end{enumerate}
 \end{multicols}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
