--- a/1-guia/ejercicios-1/ej-7-1.tex
+++ b/1-guia/ejercicios-1/ej-7-1.tex
@@ -39,3 +39,7 @@
     \item $((A \inter B) \union (B \inter C) \union (A \inter C)) \inter (A \inter B \inter C)^c $
   \end{enumerate}
 \end{multicols}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
