--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -44,7 +44,7 @@
 % \usepackage{caption} % Configuracion de figuras y tablas
 
 % para hacer los graficos tipo grafos
-\usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
+\usetikzlibrary{shapes,arrows, arrows.meta, chains, matrix, calc, trees, positioning, fit}
 \usetikzlibrary{external,decorations.pathreplacing,angles,quotes}
 
 % En general quiero que este paquete sea el último en importarse
