--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -1,130 +1,122 @@
 % Gráficos, separados para no generar bardo
 \def\doceiA{
-  \begin{tikzpicture}[scale=0.8, baseline=0]
-    % Number line
-    \draw[thick, ->,] (1,0) -- (10,0);
-    % Interval
-    \draw[fill=magenta, color=magenta] (5,0.1) circle (3pt);
-    \draw[fill=green, color=green] (8,0.2) circle (3pt);
-    \draw[fill=green, color=green] (1,0.2) circle (3pt);
-    \draw[fill=black] (1,0) circle (3pt);
-    \draw[-, green, thick] (1,0.2) -- (8,0.2);
-    \draw[->, magenta, thick] (5,0.1) -- (9,0.1);
-    \node at (1,-0.3) {1};
-    \node [color=magenta]at (5,-0.3) {5};
-    \node[color=green] at (8,-0.3) {8};
+  \begin{tikzpicture}[
+    scale=0.8,
+    baseline=0,
+    nodo lleno/.style 2 args={draw, circle, color={##1}, fill={##1}, inner sep = 0.6pt, label=below: {$##2$}},
+    ejes/.style={thin, color=gray, Latex-Latex}
+    ]
+    \draw[ejes] (-1,0) -- (10,0);
+    \node[nodo lleno={magenta}{5}] at (5,0) {};
+    \node[nodo lleno={OliveGreen}{8}] at (8,0) {};
+    \draw[{Latex-]},thick, OliveGreen] (0.5,0) -- (8,0);
+    \draw[{[-Latex},thick, magenta] (5,0) -- (9,0);
   \end{tikzpicture}
 }
 
 \def\doceiiA{
   \begin{tikzpicture}[scale=0.8, baseline=0]
-    % Number line
-    \draw[thick, ->,] (1,0) -- (10,0);
-    % Interval
+    \draw[thick, Latex-Latex,] (1,0) -- (11,0);
     \draw[color=magenta] (5,0.1) circle (3pt);
-    \draw[color=green] (8,0.1) circle (3pt);
-    \draw[fill=magenta, color=magenta] (1,0.1) circle (3pt);
-    \draw[fill=black] (1,0) circle (3pt);
-    \draw[-, magenta, thick] (1,0.1) -- (5,0.1);
-    \draw[->, green, thick] (8,0.1) -- (10,0.1);
-    \node at (1,-0.3) {1};
+    \draw[color=OliveGreen] (8,0.1) circle (3pt);
+    \draw[Latex-, magenta, thick] (2,0.1) -- (5,0.1);
+    \draw[-Latex, OliveGreen, thick] (8,0.1) -- (10,0.1);
     \node [color=magenta]at (5,-0.3) {5};
-    \node[color=green] at (8,-0.3) {8};
+    \node[color=OliveGreen] at (8,-0.3) {8};
   \end{tikzpicture}
 }
 
 \def\doceiiE{
-  \begin{tikzpicture}[scale=0.8, baseline=0]
-    % Number line
-    \draw[thick, <->,] (-4,0) -- (5,0);
-    \draw[thick] (0,-0.5) -- (0,0.6);
-    \node[color=black] at (0,-0.7) {0};
-    % Intervals
-	% Set A
+  \begin{tikzpicture}[
+      scale=0.8,
+      baseline=0,
+    ]
+    \draw[thick, Latex-Latex,] (-4,0) -- (5,0);
+
     \draw[fill=magenta, color=magenta] (3,0.3) circle (3pt);
-    \draw[->, magenta, thick] (3,0.3) -- (5,0.3);
+    \draw[-Latex, magenta, thick] (3,0.3) -- (5,0.3);
     \node[color=magenta] at (3,-0.3) {3};
-	%Set B
-    \draw[fill=green, color=green] (2,0.3) circle (3pt);
-    \draw[fill=green, color=green] (-2,0.3) circle (3pt);
-    \draw[-, green, thick] (-2,0.3) -- (2,0.3);
-    \node[color=green] at (2,-0.3) {2};
-    \node[color=green] at (-2,-0.3) {-2};
+
+    \draw[fill=OliveGreen, color=OliveGreen] (2,0.3) circle (3pt);
+    \draw[fill=OliveGreen, color=OliveGreen] (-2,0.3) circle (3pt);
+    \draw[-, OliveGreen, thick] (-2,0.3) -- (2,0.3);
+    \node[color=OliveGreen] at (2,-0.3) {2};
+    \node[color=OliveGreen] at (-2,-0.3) {-2};
 
   \end{tikzpicture}
 }
 
 \def\doceiiicero{
   \begin{tikzpicture}[scale=0.6, baseline=0]
-    % Number line
-    \draw[thick, <->,] (-4.5,0) -- (4.5,0);
-    % Interval
-    \draw[color=magenta] (3,0.1) circle (3pt);
-    \draw[color=green] (2,0.2) circle (3pt);
-    \draw[color=green] (-2,0.2) circle (3pt);
 
-    \draw[->, magenta, thick] (3,0.1) -- (4.5,0.1);
-    \draw[<-, green, thick] (-4.5,0.2) -- (-2,0.2);
-    \draw[->, green, thick] (2,0.2) -- (4.5,0.2);
+    \draw[thick, Latex-Latex,] (-4.5,0) -- (4.5,0);
+
+    \draw[color=magenta] (3,0.1) circle (3pt);
+    \draw[color=OliveGreen] (2,0.2) circle (3pt);
+    \draw[color=OliveGreen] (-2,0.2) circle (3pt);
+
+    \draw[-Latex, magenta, thick] (3,0.1) -- (4.5,0.1);
+    \draw[Latex-, OliveGreen, thick] (-4.5,0.2) -- (-2,0.2);
+    \draw[-Latex, OliveGreen, thick] (2,0.2) -- (4.5,0.2);
 
     \node[color=magenta] at (3,-0.3) {3};
-    \node[color=green] at (2,-0.3) {2};
-    \node[color=green] at (-2,-0.3) {-2};
+    \node[color=OliveGreen] at (2,-0.3) {2};
+    \node[color=OliveGreen] at (-2,-0.3) {-2};
   \end{tikzpicture}
 }
 
 \def\doceiiiuno{
   \begin{tikzpicture}[scale=0.6, baseline=0]
     % Number line
-    \draw[thick, <->,] (-4.5,0) -- (4.5,0);
+    \draw[thick, Latex-Latex,] (-4.5,0) -- (4.5,0);
     % Interval
     \draw[fill=magenta, color=magenta] (3,0.1) circle (3pt);
-    \draw[fill=green, color=green] (2,0.2) circle (3pt);
-    \draw[fill=green, color=green] (-2,0.2) circle (3pt);
+    \draw[fill=OliveGreen, color=OliveGreen] (2,0.2) circle (3pt);
+    \draw[fill=OliveGreen, color=OliveGreen] (-2,0.2) circle (3pt);
 
-    \draw[<-, magenta, thick] (-3,0.1) -- (3,0.1);
-    \draw[-, green, thick] (-2,0.2) -- (2,0.2);
+    \draw[Latex-, magenta, thick] (-3,0.1) -- (3,0.1);
+    \draw[-, OliveGreen, thick] (-2,0.2) -- (2,0.2);
 
     \node[color=magenta] at (3,-0.3) {3};
-    \node[color=green] at (2,-0.3) {2};
-    \node[color=green] at (-2,-0.3) {-2};
+    \node[color=OliveGreen] at (2,-0.3) {2};
+    \node[color=OliveGreen] at (-2,-0.3) {-2};
   \end{tikzpicture}
 }
 
 \def\doceiiidos{
   \begin{tikzpicture}[scale=0.6, baseline=0]
     % Number line
-    \draw[thick, <->,] (-4.5,0) -- (4.5,0);
+    \draw[thick, Latex-Latex,] (-4.5,0) -- (4.5,0);
     % Interval
     \draw[fill=magenta, color=magenta] (3,0.1) circle (3pt);
-    \draw[color=green] (2,0.2) circle (3pt);
-    \draw[color=green] (-2,0.2) circle (3pt);
+    \draw[color=OliveGreen] (2,0.2) circle (3pt);
+    \draw[color=OliveGreen] (-2,0.2) circle (3pt);
 
-    \draw[<-, magenta, thick] (-4,0.1) -- (3,0.1);
-    \draw[<-, green, thick] (-4,0.2) -- (-2,0.2);
-    \draw[->, green, thick] (2,0.2) -- (4,0.2);
+    \draw[Latex-, magenta, thick] (-4,0.1) -- (3,0.1);
+    \draw[Latex-, OliveGreen, thick] (-4,0.2) -- (-2,0.2);
+    \draw[-Latex, OliveGreen, thick] (2,0.2) -- (4,0.2);
 
     \node[color=magenta] at (3,-0.3) {3};
-    \node[color=green] at (2,-0.3) {2};
-    \node[color=green] at (-2,-0.3) {-2};
+    \node[color=OliveGreen] at (2,-0.3) {2};
+    \node[color=OliveGreen] at (-2,-0.3) {-2};
   \end{tikzpicture}
 }
 
 \def\doceiiitres{
   \begin{tikzpicture}[scale=0.6, baseline=0]
     % Number line
-    \draw[thick, <->,] (-4.5,0) -- (4.5,0);
+    \draw[thick, Latex-Latex] (-4.5,0) -- (4.5,0);
     % Interval
     \draw[color=magenta] (3,0.1) circle (3pt);
-    \draw[color=green] (2,0.2) circle (3pt);
-    \draw[color=green] (-2,0.2) circle (3pt);
+    \draw[color=OliveGreen] (2,0.2) circle (3pt);
+    \draw[color=OliveGreen] (-2,0.2) circle (3pt);
 
-    \draw[->, magenta, thick] (3,0.1) -- (4.5,0.1);
-    \draw[-, green, thick] (-2,0.2) -- (2,0.2);
+    \draw[-Latex, magenta, thick] (3,0.1) -- (4.5,0.1);
+    \draw[-, OliveGreen, thick] (-2,0.2) -- (2,0.2);
 
     \node[color=magenta] at (3,-0.3) {3};
-    \node[color=green] at (2,-0.3) {2};
-    \node[color=green] at (-2,-0.3) {-2};
+    \node[color=OliveGreen] at (2,-0.3) {2};
+    \node[color=OliveGreen] at (-2,-0.3) {-2};
   \end{tikzpicture}
 }
 
@@ -153,18 +145,19 @@
           opuesto al de la original.
 
     \item Reescribir las proposiciones \ref{12-item1} y \ref{12-item2} del item \ref{12-itemi}
-          utilizando las equivalencias del ejercicio \ref{ej:10}\ref{10-1-i}
+          utilizando las equivalencias del ejercicio \refEjercicio{ej:10}\ref{10-1-i}
   \end{enumerate}
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
   \item
-
         \begin{enumerate}[label=\alph*)]
           \item $\paratodo n \en \naturales,\, n \geq 5 \otext n \leq 8$.
 
                 La proposición es verdadera. El conjunto descrito por $\set{ n \en \naturales \talque n \leq 8 \otext n \geq 5} = \naturales$
-                \doceiA                        \par
+                $$
+                  \doceiA
+                $$
                 \red{¿Se puede justificar con un gráfico? \blue{$\to$ ¡Sí!}}
 
           \item $\existe n \en \naturales \talque n \geq 5 \y n\leq 8.$\par
@@ -225,14 +218,14 @@
           \item $\paratodo n \en \naturales \talque \existe m \en \naturales, m \leq n$.\par
                 La proposición es verdadera, el único $m \en \naturales$ que cumple eso es el $m = 1$.
 
-          \item $\existe x \en \reales,\, x > 3 \land x^2 \leq 4$.\par          		
+          \item $\existe x \en \reales,\, x > 3 \land x^2 \leq 4$.\par
                 La proposición es falsa. El nuevo conjunto propuesto es vacío.\par
                 \[
                   \llaves{c}{
-                    \magenta{A = \set{x \en \reales \talque x > 3}} 
+                    \magenta{A = \set{x \en \reales \talque x > 3}}
                     \\
-					\ytext
-					\\	
+                    \ytext
+                    \\
                     \green{B = \set{x \en \reales \talque |x| \leq 2}}
                   } \to \doceiiE
                 \]
@@ -248,28 +241,48 @@
         \end{enumerate}
 
   \item
-          e)
+        \begin{itemize}
+          \item[e)]
+                $$
+                  \begin{array}{|c|c|c|c|}
+                    \hline
+                    p \entonces q           & \paratodo x \en \reales, x > 3 \entonces x^2 > 4 & \doceiiicero & A \stacktext{?}{\subseteq} B \Tilde                  \\
+                    \hline
+                    \sim q \entonces \sim p & x^2 \leq 4 \entonces x \leq 3                    & \doceiiiuno  & A \stacktext{?}{\subseteq} B \Tilde                  \\
+                    \hline
+                    \sim p \lor q           & x \leq 3 \otext x^2 > 4                          & \doceiiidos  & A \union B \igual{?} \universo \Tilde                \\
+                    \hline
+                    \sim (p \land \sim q)   & \sim (x > 3 \y x^2 \leq 4 )                      & \doceiiitres & (A \inter B)^c \igual{?} \vacio^c = \universo \Tilde \\
+                    \hline
+                  \end{array}
+                $$
 
-        $$
-          \begin{array}{|c|c|c|c|}
-            \hline
-            p \entonces q           & \paratodo x \en \reales, x > 3 \entonces x^2 > 4 & \doceiiicero & A \stacktext{?}{\subseteq} B \Tilde                  \\
-            \hline
-            \sim q \entonces \sim p & x^2 \leq 4 \entonces x \leq 3                    & \doceiiiuno  & A \stacktext{?}{\subseteq} B \Tilde                  \\
-            \hline
-            \sim p \lor q           & x \leq 3 \otext x^2 > 4                              & \doceiiidos  & A \union B \igual{?} \universo \Tilde                \\
-            \hline
-            \sim (p \lor \sim q)    & \sim (x > 3 \y x^2 \leq 4 )                      & \doceiiitres & (A \inter B)^c \igual{?} \vacio^c = \universo \Tilde \\
-            \hline
-          \end{array}
-        $$
+          \item[f)]
+                \textit{$p \entonces q$:}
+                \begin{center}
+                  Si $n \en \naturales$ con último dígito 4 entonces $n$ es un número par.
+                \end{center}
+
+                \textit{$\sim q \entonces \sim p$:}
+                \begin{center}
+                  Si $n \en \naturales$ es impar entonces el último dígito de $n$ no es 4.
+                \end{center}
+
+                \textit{$\sim p \lor q$:}
+                \begin{center}
+                  $n \en \naturales$ no termina con 4 o $n$ es par.
+                \end{center}
+
+                \textit{$\sim (p \land \sim q$:}
+                ¿Cómo se enuncia esto?
+                \begin{center}
+                  No es el caso en que $n \en \naturales$ termina con 4 y $n$ es impar
+                \end{center}
+        \end{itemize}
 \end{enumerate}
 
-% Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
   \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
 \end{aportes}
