--- a/1-guia/ejercicios-1/ej-3-1.tex
+++ b/1-guia/ejercicios-1/ej-3-1.tex
@@ -3,22 +3,29 @@
   \begin{enumerate}[label=\roman*)]
     \item $ A = \set{1, 2, 3}, B = \set{5,4,3,2,1}$
     \item $ A = \set{1, 2, 3}, B = \set{1,2,\set{3},-3}$
-    \item $ A = \set{x \en \reales \talque 2<|x|<3}, B = \set{x \en \reales \talque x^2 < 3 }$
+    \item $ A = \set{x \en \reales \talque 2< |x| <3}, B = \set{x \en \reales \talque x^2 < 3 }$
     \item $ A = \set{\vacio}, B = \vacio $
   \end{enumerate}
 \end{enunciado}
 
-Inclusión :
+Inclusión, subconjunto. $A$ es un subconjunto de $B$:
 $$
-  A \subseteq B \text{ si } \paratodo x \en \universo, x \en A \entonces x \en B
+  \cajaResultado{
+    A \subseteq B
+    \sii
+    \paratodo x \en \universo,\, x \en A \entonces x \en B
+  }
 $$
 \begin{enumerate}[label=(\roman*)]
-  \item $\llave{l}{
+  \item Se tiene que
+        $$
+          \llave{l}{
             A = \set{1, 2, 3} \\
             B = \set{5,4,3,2,1}
           }
-          \flecha{respuesta} \quad
-          A \stacktext{\Tilde}{\subseteq} B$
+          \flecha{sale con la}[definición]
+          A \subseteq B
+        $$
 
   \item $$
           \llave{l}{
@@ -37,34 +44,33 @@ $$
 
   \item
         \def\tresiiiUno{
-          \begin{tikzpicture}[scale=0.8, baseline=0]
-            % Number line
-            \draw[thick, <->,] (-3.5,0) -- (3.5,0);
-            % Interval
-            \draw[fill=white] (2,0) circle (2pt);
-            \draw[fill=white] (3,0) circle (2pt);
-            \draw[fill=white] (-2,0) circle (2pt);
-            \draw[fill=white] (-3,0) circle (2pt);
-            \draw[-, magenta, ultra thick] (2,0) -- (3,0);
-            \draw[-, magenta, ultra thick] (-2,0) -- (-3,0);
-            \node at (2,-0.3) {2};
-            \node at (3,-0.3) {3};
-            \node at (-2,-0.3) {-2};
-            \node at (-3,-0.3) {-3};
+          \begin{tikzpicture}[
+            scale=0.8,
+            baseline=0,
+            nodo vacio/.style={draw,circle,inner sep = 1pt, fill=white, label=below: {$##1$}},
+            ejes/.style={thick, Latex-Latex}
+            ]
+            \draw[ejes] (-3.5,0) -- (3.5,0);
+            \draw[magenta, ultra thick] (2,0) -- (3,0);
+            \draw[magenta, ultra thick] (-2,0) -- (-3,0);
+            \node[nodo vacio={2}] at (2,0) {};
+            \node[nodo vacio={3}] at (3,0) {};
+            \node[nodo vacio={-2}] at (-2,0) {};
+            \node[nodo vacio={-3}] at (-3,0) {};
           \end{tikzpicture}
         }
 
         \def\tresiiiDos{
-          \begin{tikzpicture}[scale=0.8, baseline=0]
-            % Number line
-            \draw[thick, <->,] (-3.5,0) -- (3.5,0);
-            % Interval
-            \draw[fill=white] (1.732,0) circle (2pt);
-            \draw[fill=white] (-1.732,0) circle (2pt);
+          \begin{tikzpicture}[
+            scale=0.8,
+            baseline=0,
+            nodo vacio/.style={draw,circle,inner sep = 1pt, fill=white, label=below: {$##1$}},
+            ejes/.style={thick, Latex-Latex}
+            ]
+            \draw[ejes] (-3.5,0) -- (3.5,0);
             \draw[-, cyan, ultra thick] (1.732,0) -- (-1.732,0);
-            \node at (1.732,-0.3) {$\sqrt{3}$};
-            \node at (-1.732,-0.3) {$-\sqrt{3}$};
-            \node at (0,-0.3) {0};
+            \node[nodo vacio={\sqrt{3}}] at (1.732,0) {};
+            \node[nodo vacio={-\sqrt{3}}] at (-1.732,0) {};
           \end{tikzpicture}
         }
         $$
